duck/test/fail/delay.duck
import base

delay_id :: delay a -> a
delay_id x = force x

delay_if False = id
delay_if True = delay_id

assert \ 0 == delay_if True 0
